CAY-2451 Modeler: ObjEntity "Edit" button doesn't open editor for Relationship
CAY-2454 Modeler: Unable to read validation message if it's truncated
CAY-2459 Modeler: DataMap Paste function is not working
CAY-2462 Modeler: Clipboard holds old content after application was reloaded
CAY-2464 ClassCastException when returning PRUNED_NODE in expression transformer

----------------------------------
Release: 4.0
Date: August 06, 2018
----------------------------------

Bug Fixes:

CAY-2418 Modeler: unable to edit entity selected via Search
CAY-2427 Modeler: Undo throws exception
CAY-2430 Modeler: Redo throws NPE
CAY-2431 Cayenne JDK 11 compatibility
CAY-2435 cdbimport: procedure parameters are not imported
CAY-2436 NPE in CayenneRuntimeException constructor
CAY-2442 Broken EventBridge providers implementations
CAY-2444 Change URI from http:// to https:// in xsi:schemaLocation
CAY-2445 Oracle: Problem with ExpressionFactory.notInExp()

----------------------------------
Release: 4.0.RC1
Date: April 25, 2018
----------------------------------

Changes/New Features:

CAY-2414 Modeler: new icon design

Bug Fixes:

CAY-2253 Cayenne JDK9 compatibility
CAY-2361 PostgreSQL DbGenerator issues
CAY-2364 Wrong logging in SQLTemplate
CAY-2365 SQLExec query tries to convert (unexpected) result set into objects
CAY-2367 ClassCastException reading object with an attribute of type 'char'
CAY-2368 ColumnSelect: Property.self() translates into wrong SQL code
CAY-2370 ValueObjectType for byte[] fails lookup
CAY-2382 Lack of synchronization in DataContext serialization
CAY-2387 Can't select byte[] property with ColumnSelect
CAY-2388 Modeler: Visualization issues with undo/redo actions for attributes and relationships
CAY-2389 DbEntity qualifier with DbPath expression translates into wrong SQL
CAY-2392 Modeler: Unable to remove DataNode
CAY-2401 Modeler: NPE in ObjEntity sync action
CAY-2405 Broken prefetch of entity with inheritance and attribute with custom java type